src/objects/Vendor_Order_Header__c.object
<CustomObject>
    <fields>
        <fullName>BRP_Response__c</fullName>
        <label>BRP Response</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <formula>DATEVALUE( CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CreatedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Date_Formula__c</fullName>
        <formula>IF(  ISBLANK(Expected_Date__c) ,   TODAY() +  Purchase_Order_Type__r.Lead_Time__c  ,  IF( AND(ISPICKVAL(Status__c, &apos;Open&apos;), (Expected_Date__c - TODAY()) &lt; 0) , TODAY() +  Purchase_Order_Type__r.Lead_Time__c, Expected_Date__c) )</formula>
        <label>Expected Date Formula</label>
        <type>Date</type>
    </fields>
    <fields>
    	<fullName>Vendor_Name__c</fullName>
	    <formula>Vendor__r.Name</formula>
	    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
	    <label>Vendor Name</label>
	    <type>Text</type>
    </fields>
    <fields>
    	<fullName>Purchase_Order_Type_Name__c</fullName>
	    <formula>Purchase_Order_Type__r.Name</formula>
	    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
	    <label>Purchase Order Type Name</label>
	    <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Date__c</fullName>
        <label>Expected Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Honda_Order_Type__c</fullName>
        <label>Honda Order Type</label>
        <picklist>
            <picklistValues>
                <fullName>Daily order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stock order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaign order</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>In_Progress_VR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Vendor Order Receiving which is using the record</inlineHelpText>
        <label>In Progress VR</label>
        <referenceTo>Vendor_Receiving_Header__c</referenceTo>
        <relationshipLabel>Vendor Order Headers</relationshipLabel>
        <relationshipName>Vendor_Order_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Legacy_VO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Legacy VO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <formula>DATEVALUE(LastModifiedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LastModifiedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Vendor_Order_Headers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>General unit notes</description>
        <label>Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ordered_Date__c</fullName>
        <label>Ordered Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Vendor_Order_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchase_Order_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchase Order Type</label>
        <referenceTo>PO_Type__c</referenceTo>
        <relationshipLabel>Vendor Order Headers</relationshipLabel>
        <relationshipName>Vendor_Order_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Received_Date__c</fullName>
        <label>Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Locked</fullName>
                </value>
                <value>
                    <fullName>On Order</fullName>
                </value>
                <value>
                    <fullName>Partially Received</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Recieved__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Recieved</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Vendor Order Headers</relationshipLabel>
        <relationshipName>Vendor_Order_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Vendor Order Header</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Vendor__c</columns>
        <columns>Status__c</columns>
        <columns>Purchase_Order_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>VO-{00000000}</displayFormat>
        <label>Vendor Order Header Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendor Order Headers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>